product_docs/docs/edb-postgres-ai/1.3/hybrid-manager/using_hybrid_manager/migration/schema_migration/migration_portal/hm_schema_migration.mdx
---
title: Assessing schemas for HM projects
navTitle: Assessing schemas loaded by agent
description: Learn about assessing schemas for database migrations with Hybrid Manager.
redirects:
- /edb-postgres-ai/hybrid-manager/using_hybrid_manager/migration/migration_portal/hm_schema_migration
---

Use the collaborative [project-scoped workspace](access_mp.mdx#project-scoped-workspace-vs-users-workspace) of Migration Portal to convert and migrate schemas in the context of a database migration. HM provides an integration that lets you use the HM console to create a Migration Portal project. In this project, you can add source database schemas preloaded by the [EDB Postgres AI agent](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/oracle_to_hm_managed/) while performing a database migration.

Only Oracle databases include an integration of Migration Portal into a migration workflow, as their schemas require compatibility assessment and often conversion before they're migrated to the destination database.

To upload and assess externally provided DDL schema files, [use the user's workspace](external_schema_migration.mdx).

## Prerequisites

-   [Register an Oracle database](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/oracle_to_hm_managed/) with HM.

-   **Optional:** To facilitate resolving schema incompatibilities in Migration Portal, the HM administrator must [enable and configure the AI Copilot with the AI/LLM of your organization](../../../enabling_migration_copilot.mdx).

## Accessing Migration Portal

For Oracle databases only, use the Migration Portal integration to assess and migrate schemas:

1.  In the **Estate** page, select the **Migrations** tab.

1.  To open the detailed view of the database, select the name of the database you want to migrate.

If you already created a schema migration project for one, several, or all schemas, the HM console displays a link with the name of the project in the **Migration Portal Project** column. Select the link to open a Migration Portal workspace that contains all the schemas in that project.

If you haven't created a project for your schema migrations yet, select either the global **New Migration Portal Project** button or the schema-scoped **+** sign. This selection starts a new workflow to [create a Migration Portal](hm_schema_migration.mdx#creating-a-migration-portal-project) project.

## Creating a Migration Portal project

You can create Migration Portal projects from the HM console. 

1.  In the **Estate** page, select the **Migrations** tab.

1.  To open the detailed view of the database, select the name of the database you want to migrate.

1.  In the detailed view of the database, select the **Schemas** tab. 

1.  Select **New Migration Portal Project** or the the plus sign next to one of the schemas you want to migrate.

    !!!tip
        The **Dependencies** column shows the other schemas the current schema relies on. We recommend grouping a schema with all its dependencies in a single Migration Portal project to ensure that all referenced objects exist in the destination database.

1.  In the pop-up window, enter the details for the Migration Portal project that will host the assessment, conversion, and migration of the schemas. Select **Continue**.

1.  Select all the schemas you want to add to this Migration Portal project. You can select only schemas that the EDB Postgres AI agent has ingested successfully and schemas that aren't already part of a different Migration Portal project.

    !!!note 
        You can't add schemas to the existing project later. However, you can use a different project to migrate other schemas to the same destination database.

1.  Select **Create New Project**.

    In the background, this creates a Migration Portal project and loads the source schemas into it for analysis.

After HM finishes loading the schemas and creating a project in Migration Portal, a link is added with the name of the project. Select the link to open Migration Portal.

## Working in Migration Portal

The selected schemas were uploaded and assessed by Migration Portal. Use the AI Copilot or QuickHelp to help you resolve incompatibilities. 

1.  After you resolve all compatibility issues, select **Migrate to**.

1.  Select the **Online migration** option (recommended).

1.  Select the schemas you want to migrate, but clear **Constraints** from the list of objects underneath the database. Select **Next**.

    !!!note

        See [Schema integrity and performance considerations](/edb-postgres-ai/current/hybrid-manager/using_hybrid_manager/migration/migration_guides/self_managed_pg_to_self_managed_pg/handling_schema/) to learn more about why constraints must be disabled and other considerations.

1.  In the **Connect to your cluster** page, enter the host name of the database cluster you want to use as a destination.

    !!!tip
    If you're migrating to an HM-managed database cluster, you can find the read/write host and other connection data from the **Clusters** page. Select your cluster, and then select **Connect**.
    !!!

    !!!warning Distributed high-availability and advanced high-availability PGD destinations in HM 
    This warning applies when using the Migration Portal online migration option to migrate schemas into an HM-managed distributed high-availability or advanced high-availability database cluster running EDB Postgres Advanced Server. In this case, both the **Target Database** and **Maintenance Database** fields must point at the default `bdrdb` database. This ensures the migrated schemas are created in the primary PGD database that will be replicated across the cluster.
    !!!

1.  Select **Next** and wait until the schemas were imported successfully.

1.  Connect to the target database cluster and ensure the schemas were migrated. 

## Deleting a Migration Portal project

When using the project-scoped workspace of Migration Portal, you can delete projects only through the HM console, not through the integrated portal.

1.  From the **Estate** page, select the **Migrations** tab.

2.  Select the name of the database you were migrating.

3.  In the database's detailed view, select the **Schemas** tab. You see a list of schemas and the assigned Migration Portal projects.

4.  Locate the schema assigned to the Migration Portal project you want to delete, and select the **+** (plus) sign in the same line.

    !!!note

       If you're using a project to assess several schemas, deleting the project from any of the assigned schemas deletes the project for all schemas.

5.  In the expanded view, under **Actions**, select the trash can icon.

6.  Type **delete project** and select **Confirm Delete** to permanently delete the project. 

## Switching to user's workspace

While you're working on schemas in Migration Portal, you can switch to the [user's workspace](access_mp.mdx#project-scoped-workspace-vs-users-workspace) for manual DDL upload. 

To do so, select **Switch to user's workspace**.

However, this workspace doesn't display the schemas you selected during project creation. It serves only as a way to quickly switch between tasks. See [Managing external schemas for external DDL](external_schema_migration.mdx) for more information.

## Related topics

-   [Perform an online or offline migration](https://www.enterprisedb.com/docs/migration_portal/latest/04_mp_migrating_database/03_mp_schema_migration/) of the converted schemas to a destination database.

-   [Migration Portal documentation](https://www.enterprisedb.com/docs/migration_portal/latest/03_mp_using_portal/) for recommendations and guidelines on how to use the portal.
